--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Library</title>
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/index.css"> 
 </head>
 <body>
     <header>
-        Games Library
+        <a class="homePage" href="/">
+            Games Library
+        </a>
     </header>
 
     <% if (errors && errors.length > 0) { %>
@@ -26,12 +28,11 @@
         <form action="/search" method="get">
             <div class="search-container">
                 <input class="search-bar" name="searchTerm" type="text" placeholder="Search games..." value="<%= searchTerm %>">
-                <button type="submit">Search</button> 
             </div>
         </form>
 
         <div class="button-container">
-            <button>Add Product</button>
+            <a href="/addGame" class="button-link">Add Product</a>
             <button>Filter</button>
         </div>
         <table>
@@ -40,6 +41,7 @@
                 <th>Description</th>
                 <th>Developer</th>
                 <th>Genre</th>
+                <th>Actions</th>
             </tr>
             <% items.forEach(item => { %>
                 <tr>
@@ -47,6 +49,17 @@
                     <td><%= item.description %></td>
                     <td><%= item.developer_name || 'N/A' %></td>
                     <td><%= item.genre_name || 'N/A' %></td>
+                    <td>                    <div class="dropdown">
+                        <button class="dots-button">
+                            <i class="fas fa-circle dot"></i>
+                            <i class="fas fa-circle dot"></i>
+                            <i class="fas fa-circle dot"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="/editGame/<%= item.id %>">Edit</a>
+                            <a href="/deleteGame/<%= item.id %>" onclick="return confirm('Are you sure you want to delete this game?')">Delete</a>
+                        </div>
+                    </div></td>
                 </tr>
             <% }) %>
         </table>
