--- a/views/updateGame.ejs
+++ b/views/updateGame.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Game - Games Library</title>
-    <link rel="stylesheet" href="/css/addGame.css"> 
+    <title>Update Page</title>
+    <link rel="stylesheet" href="/css/addGame.css">
 </head>
 <body>
     <header>
@@ -13,33 +13,24 @@
             Games Library
         </a>
     </header>
-
-    <% if (errors && errors.length > 0) { %>
-        <div class="error-messages">
-            <% errors.forEach(function(error) { %>
-                <p><%= error.msg %></p>
-            <% }) %>
-        </div>
-    <% } %>
-
     <div class="main-container">
         <h2>Add a New Game</h2>
         <form action="/add" method="post">
             <div class="form-group">
                 <label for="gameName">Game Name</label>
-                <input type="text" id="gameName" name="gameName" required>
+                <input type="text" id="gameName" name="gameName" value="<%= game.name %>" required>
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea id="description" name="description" rows="4" required></textarea>
+                <textarea id="description" name="description" rows="4" required> <%= game.description %> </textarea>
             </div>
             <div class="form-group">
                 <label for="developer">Developer</label>
-                <input type="text" id="developer" name="developer" required>
+                <input type="text" id="developer" value="<%= game.developer_name %>" name="developer" required>
             </div>
             <div class="form-group">
                 <label for="genre">Genre</label>
-                <input type="text" id="genre" name="genre" required>
+                <input type="text" id="genre" value="<%= game.genre_name%>" name="genre" required>
             </div>
             <div class="button-container">
                 <button type="submit">Submit</button>
