--- a/views/updateGame.ejs
+++ b/views/updateGame.ejs
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Update Page</title>
-    <link rel="stylesheet" href="/css/addGame.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/addGame.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  </head>
+  <body>
     <header>
-        <a class="homePage" href="/">
-            Games Library
-        </a>
+      <a class="homePage" href="/"> Games Library </a>
     </header>
     <div class="main-container">
-        <h2>Add a New Game</h2>
-        <form action="/add" method="post">
-            <div class="form-group">
-                <label for="gameName">Game Name</label>
-                <input type="text" id="gameName" name="gameName" value="<%= game.name %>" required>
-            </div>
-            <div class="form-group">
-                <label for="description">Description</label>
-                <textarea id="description" name="description" rows="4" required> <%= game.description %> </textarea>
-            </div>
-            <div class="form-group">
-                <label for="developer">Developer</label>
-                <input type="text" id="developer" value="<%= game.developer_name %>" name="developer" required>
-            </div>
-            <div class="form-group">
-                <label for="genre">Genre</label>
-                <input type="text" id="genre" value="<%= game.genre_name%>" name="genre" required>
-            </div>
-            <div class="button-container">
-                <button type="submit">Submit</button>
-            </div>
-        </form>
+      <h2>Add a New Game</h2>
+      <form action="/add" method="post">
+        <div class="form-group">
+          <label for="gameName">Game Name</label>
+          <input
+            type="text"
+            id="gameName"
+            name="gameName"
+            value="<%= game.name %>"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <textarea id="description" name="description" rows="4" required>
+ <%= game.description %> </textarea
+          >
+        </div>
+        <div class="form-group">
+          <label for="developer">Developer</label>
+          <input
+            type="text"
+            id="developer"
+            value="<%= game.developer_name %>"
+            name="developer"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="genre">Genre</label>
+          <input
+            type="text"
+            id="genre"
+            value="<%= game.genre_name%>"
+            name="genre"
+            required
+          />
+        </div>
+        <div class="button-container">
+          <button type="submit">Submit</button>
+        </div>
+      </form>
     </div>
-</body>
+  </body>
 </html>
