--- a/views/filteredResult.ejs
+++ b/views/filteredResult.ejs
@@ -7,6 +7,7 @@
     <title>Games Library</title>
     <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Inventory</title>
   </head>
   <body>
     <header>
