--- a/views/updateGame.ejs
+++ b/views/updateGame.ejs
@@ -7,6 +7,7 @@
     <title>Update Page</title>
     <link rel="stylesheet" href="/css/addGame.css" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Inventory</title>
   </head>
   <body>
     <header>
